# sql-glider

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  graph.json  lineage.json  lineage_output.json  main.py  megagraph.json  mm.md  pyproject.toml  sqlglider.toml.example  test_cte.sql  test_multi.sql  test_query.sql  test_subquery.sql  test_tables.sql
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: zensical.toml
docs/docs/: catalogs.md  graph-lineage.md  index.md  templating.md
examples/: plotly_viewer.py
plans/: 2025-12-05-column-level-lineage.md  2025-12-05-reverse-lineage.md  2025-12-06-config-file-support.md  2025-12-06-graph-lineage.md  2025-12-06-unify-single-multi-query.md  2025-12-07-sample-data-model.md  2025-12-07-sql-templating.md  2025-12-08-tables-command.md  2025-12-09-graph-query-paths.md  2025-12-13-dissect-command.md  2025-12-14-tables-pull-command.md  2026-01-25-fix-union-lineage-chain.md  2026-01-26-file-scoped-schema-context.md  2026-01-28-sparksql-table-extraction.md  2026-01-29-no-star-flag.md  2026-01-29-resolve-schema.md  2026-01-29-schema-pruning-optimization.md  2026-01-29-tables-scrape-command.md  2026-02-02-diagram-output-formats.md
sample_data_model/: README.md
sample_data_model/business/: expire_dim_customer.sql  load_fact_orders.sql  load_fact_payments.sql  merge_dim_customer.sql  merge_dim_product.sql  update_dim_customer_metrics.sql
sample_data_model/complex/: conditional_merge.sql  cte_insert.sql  multi_table_transform.sql
sample_data_model/ddl/: dim_customer.sql  dim_product.sql  fact_orders.sql  fact_payments.sql  raw_addresses.sql  raw_customers.sql  raw_order_items.sql  raw_orders.sql  raw_payments.sql  raw_products.sql  stg_customers.sql  stg_orders.sql  stg_payments.sql  stg_products.sql
sample_data_model/incremental/: incr_fact_orders.sql  incr_fact_payments.sql  incr_pres_sales_summary.sql
sample_data_model/maintenance/: delete_expired_customers.sql  update_product_status.sql
sample_data_model/presentation/: load_pres_customer_360.sql  load_pres_customer_cohort.sql  load_pres_product_performance.sql  load_pres_sales_summary.sql
sample_data_model/staging/: load_stg_customers.sql  load_stg_orders.sql  load_stg_payments.sql  load_stg_products.sql
src/sqlglider/: __init__.py  cli.py  global_models.py
src/sqlglider/catalog/: __init__.py  base.py  databricks.py  registry.py
src/sqlglider/dissection/: __init__.py  analyzer.py  formatters.py  models.py
src/sqlglider/graph/: __init__.py  builder.py  diagram_formatters.py  formatters.py  merge.py  models.py  query.py  serialization.py
src/sqlglider/lineage/: __init__.py  analyzer.py  formatters.py
src/sqlglider/schema/: extractor.py
src/sqlglider/templating/: __init__.py  base.py  jinja.py  registry.py  variables.py
src/sqlglider/utils/: __init__.py  config.py  file_utils.py  schema.py
tests/: __init__.py
tests/fixtures/: sample_manifest.csv
tests/fixtures/multi_file_queries/: analytics_pipeline.sql  analytics_pipeline_union_merge.sql  customers.sql  orders.sql  reports.sql  view_based_merge.sql
tests/fixtures/original_queries/: test_cte_query.sql  test_cte_view_star.sql  test_generated_column_query.sql  test_multi_query.sql  test_single_query.sql  test_view.sql  test_view_window_cte.sql
tests/sqlglider/: __init__.py  test_cli.py
tests/sqlglider/catalog/: __init__.py  test_base.py  test_databricks.py  test_registry.py
tests/sqlglider/dissection/: __init__.py  test_analyzer.py  test_formatters.py  test_models.py
tests/sqlglider/graph/: __init__.py  test_builder.py  test_diagram_formatters.py  test_formatters.py  test_merge.py  test_models.py  test_query.py  test_serialization.py
tests/sqlglider/lineage/: __init__.py  test_analyzer.py  test_formatters.py
tests/sqlglider/schema/: test_extractor.py
tests/sqlglider/templating/: __init__.py  test_base.py  test_jinja.py  test_registry.py  test_variables.py
tests/sqlglider/utils/: test_config.py  test_file_utils.py  test_schema.py
