[project]
name = "sql-glider"
version = "0.1.0"
description = "SQL Utility Toolkit for better understanding, use, and governance of your queries in a native environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot[rs]>=25.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sqlglider = "sqlglider.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
